[package]
name = "hysteresis"
version = "0.1.0"
authors = ["Lorenzo Panieri <panierilorenzo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"
rand_xoshiro = "0.4.0"

[lib]
name = "hysteresis"
crate-type = ["cdylib"]