[package]
name = "HYSTERESIS_v0_3_1"
version = "0.3.1"
authors = ["Lorenzo Panieri <panierilorenzo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"
# rand_xoshiro = "0.4.0"
rust_dsp_utils = {git="https://github.com/Flux-Audio/rust-dsp-utils.git"}
dsp_lab = {git="https://github.com/Flux-Audio/dsp_lab.git"}

[lib]
name = "HYSTERESIS_v0_3_1"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true